--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build-archive-storybook": "build-archive-storybook"
+    "build-archive-storybook": "build-archive-storybook",
+    "chromatic": "npx chromatic --build-script-name=build-archive-storybook -t=chpt_d93a471e56b19de"
   },
   "keywords": [],
   "author": "",
@@ -22,5 +23,7 @@
     "@storybook/server-webpack5": "^7.6.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
-  }
+  },
+  "readme": "ERROR: No README data found!",
+  "_id": "chromaticplaywright1@1.0.0"
 }
